# hintents

./: .all-contributorsrc  .gitignore  .golangci.yml  ISSUE_95_VERIFICATION.md  Makefile  README.md  create_issues.py  create_missing_issues.py  emojis.py  fix_all_licenses.sh  force_fix_licenses.sh  go.mod  go.sum  main.go  package-lock.json  test-verbose.sh  test_cross_compile.sh  test_sandbox_mode.sh  test_update_checker.sh
.github/: pull_request_template.md
.github/workflows/: all-contributors.yml  ci.yml  emoji_check.yml  test-cross-platform.yml.example
cmd/: completion.go  root.go
cmd/erst/: main.go
cmd/verify_hashing/: main.go
docs/: ARCHITECTURE.md  CUSTOM_NETWORKS.md  LOCAL_WASM_REPLAY.md  RPC_FALLBACK.md  SETUP_DISCUSSIONS.md  SIMULATION_REQUEST_BUILDER.md  VERBOSE_MODE.md  ci-test-summary.md  implementation-verification.md  phase-9-verification.md  security-quick-reference.md  simulator-interface.md  trace-navigation.md
internal/analytics/: storage_fee.go  storage_visualizer.go
internal/authtrace/: custom_auth.go  reporter.go  tracker.go  (+2 more)
scripts/: README.md  check-license-headers.sh  lint-unused.sh  remove_emojis.py  test-ci-locally.sh  test-unused-detection.sh  test_local_replay.sh  validate-ci.sh  validate-errors.sh  validate-interface.sh  verify-security-implementation.sh
simulator/: Cargo.toml
simulator/src/: main.rs  runner.rs  source_mapper.rs  storage.rs  test.rs  types.rs
simulator/src/ipc/: validate.rs
src/: config.rs  error.rs  main.rs
test/: generate_sample_trace.go  rpc_test.sh
tests/: audit.test.ts  config_priority_test.go
(+150 files in other folders)
