[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-env-host = "25.0.1" # Updated to latest version
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
inferno = "0.11"
jsonschema = "0.40.2"
object = "0.38.1"
